--- a/ffl-transfers.html
+++ b/ffl-transfers.html
@@ -39,7 +39,7 @@
     <a href="shop/gear.html">Gear</a>
     <a href="shop/optics.html">Optics & Sights</a>
     <a href="shop/reloading.html">Reloading</a>
-    <a href="shop/survival.html">Prep & Survival</a>
+    <a href="shop/outdoors.html">Outdoors</a>
     <a href="gunsmithing.html">Gunsmithing</a>
     <a href="ffl-transfers.html">FFL Transfers</a>
   </nav>
@@ -104,7 +104,7 @@
           <li><a href="shop/gear.html">Gear</a></li>
           <li><a href="shop/optics.html">Optics</a></li>
           <li><a href="shop/reloading.html">Reloading</a></li>
-          <li><a href="shop/survival.html">Survival</a></li>
+          <li><a href="shop/outdoors.html">Outdoors</a></li>
           <li><a href="shop/brands.html">Brands</a></li>
         </ul>
       </div>
