--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
       <a href="shop/gear.html">Gear</a>
       <a href="shop/optics.html">Optics</a>
       <a href="shop/reloading.html">Reloading</a>
-      <a href="shop/survival.html">Survival</a>
+      <a href="shop/outdoors.html">Outdoors</a>
       <a href="shop/brands.html">Brands</a>
       <a href="shop/sale.html">ON SALE</a>
       <a href="services.html">Services</a>
@@ -494,9 +494,9 @@
             </a>
           </div>
           <div class="carousel-item">
-            <a href="shop/survival.html" class="category-card">
-              <img src="images/categories/survival.jpg" alt="Survival">
-              <h3>Prep & Survival</h3>
+            <a href="shop/outdoors.html" class="category-card">
+              <img src="images/categories/outdoors.jpg" alt="Outdoors">
+              <h3>Outdoors</h3>
               <p>1,200+ Items</p>
             </a>
           </div>
@@ -564,7 +564,7 @@
           <li><a href="shop/gear.html">Gear</a></li>
           <li><a href="shop/optics.html">Optics</a></li>
           <li><a href="shop/reloading.html">Reloading</a></li>
-          <li><a href="shop/survival.html">Survival</a></li>
+          <li><a href="shop/outdoors.html">Outdoors</a></li>
           <li><a href="shop/brands.html">Brands</a></li>
         </ul>
       </div>
