--- a/shop/guns.html
+++ b/shop/guns.html
@@ -40,7 +40,7 @@
     <a href="gear.html">Gear</a>
     <a href="optics.html">Optics & Sights</a>
     <a href="reloading.html">Reloading</a>
-    <a href="survival.html">Prep & Survival</a>
+    <a href="outdoors.html">Outdoors</a>
     <a href="../gunsmithing.html">Gunsmithing</a>
     <a href="../ffl-transfers.html">FFL Transfers</a>
   </nav>
