--- a/terms.html
+++ b/terms.html
@@ -52,7 +52,7 @@
       <a href="shop/gear.html">Gear</a>
       <a href="shop/optics.html">Optics</a>
       <a href="shop/reloading.html">Reloading</a>
-      <a href="shop/survival.html">Survival</a>
+      <a href="shop/outdoors.html">Outdoors</a>
       <a href="shop/brands.html">Brands</a>
       <a href="shop/sale.html">ON SALE</a>
       <a href="services.html">Services</a>
@@ -342,7 +342,7 @@
           <li><a href="shop/gear.html">Gear</a></li>
           <li><a href="shop/optics.html">Optics</a></li>
           <li><a href="shop/reloading.html">Reloading</a></li>
-          <li><a href="shop/survival.html">Survival</a></li>
+          <li><a href="shop/outdoors.html">Outdoors</a></li>
           <li><a href="shop/brands.html">Brands</a></li>
         </ul>
       </div>
