--- a/order-status.html
+++ b/order-status.html
@@ -111,7 +111,7 @@
       <a href="shop/gear.html">Gear</a>
       <a href="shop/optics.html">Optics</a>
       <a href="shop/reloading.html">Reloading</a>
-      <a href="shop/survival.html">Survival</a>
+      <a href="shop/outdoors.html">Outdoors</a>
       <a href="shop/brands.html">Brands</a>
       <a href="shop/sale.html">ON SALE</a>
       <a href="services.html">Services</a>
